--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,10 +64,15 @@ text-align: center;
   }
 }
 
+.middle h1{
+letter-spacing: 1.1rem;
+}
+
 /* Style the <hr> element */
 hr {
 margin: auto;
 width: 40%;
+opacity: 0.25;
 }
 
 /* left side */
